// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile renders Profile 1`] = `
<div
  style={
    Object {
      "marginLeft": "25%",
      "marginRight": "25%",
      "marginTop": "2%",
      "paddingBottom": "5%",
    }
  }
>
  <div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
      style={
        Object {
          "boxShadow": "0px 0px 0px 0px rgba(0, 0, 0, 0.2)",
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flex": 4,
            "flexDirection": "column",
          }
        }
      >
        <div
          className="MuiCardContent-root-29"
          style={
            Object {
              "flex": "1 0 auto",
            }
          }
        >
          <h1
            className="MuiTypography-root-30 MuiTypography-display1-34"
          >
            user
          </h1>
          <p
            className="MuiTypography-root-30 MuiTypography-body1-39"
            style={
              Object {
                "marginTop": 4,
              }
            }
          >
            desc
          </p>
          <p
            className="MuiTypography-root-30 MuiTypography-body1-39"
            style={
              Object {
                "color": "gray",
                "fontSize": 12,
                "marginTop": 12,
              }
            }
          >
            Hexanews member since Invalid date
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <img
          alt="avatar"
          src={undefined}
          style={
            Object {
              "borderRadius": "50%",
              "height": 100,
              "width": 100,
            }
          }
        />
      </div>
    </div>
  </div>
  <button
    className="MuiButtonBase-root-81 MuiButton-root-55 MuiButton-text-57 MuiButton-outlined-63 MuiButton-sizeSmall-78"
    disabled={false}
    id="accountButton"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "marginLeft": 20,
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-56"
    >
      My Account
    </span>
    <span
      className="MuiTouchRipple-root-84"
    />
  </button>
  <hr
    className="MuiDivider-root-91"
    style={
      Object {
        "marginTop": 20,
      }
    }
  />
  <div
    className="MuiGrid-container-95 MuiGrid-spacing-xs-24-119"
  >
    <div
      className="MuiGrid-item-96 MuiGrid-grid-xs-12-135"
      style={
        Object {
          "marginRight": 24,
        }
      }
    >
      <div
        className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
        id="card-1"
        onClick={[Function]}
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "cursor": "pointer",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-192"
        >
          <div
            className="MuiCardHeader-avatar-193"
          >
            <div
              className="MuiAvatar-root-198 MuiAvatar-colorDefault-199"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            >
              HC
            </div>
          </div>
          <div
            className="MuiCardHeader-content-195"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-body2-38 MuiCardHeader-title-196"
            >
              user
            </span>
            <span
              className="MuiTypography-root-30 MuiTypography-body2-38 MuiTypography-colorTextSecondary-53 MuiCardHeader-subheader-197"
            >
              12 September 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardContent-root-29"
        >
          <h2
            className="MuiTypography-root-30 MuiTypography-headline-35 MuiTypography-gutterBottom-47"
          >
            abc
          </h2>
          <p
            className="MuiTypography-root-30 MuiTypography-body1-39"
          >
            test
          </p>
        </div>
      </div>
      <div
        className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
        id="card-2"
        onClick={[Function]}
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "cursor": "pointer",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-192"
        >
          <div
            className="MuiCardHeader-avatar-193"
          >
            <div
              className="MuiAvatar-root-198 MuiAvatar-colorDefault-199"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            >
              HC
            </div>
          </div>
          <div
            className="MuiCardHeader-content-195"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-body2-38 MuiCardHeader-title-196"
            >
              user
            </span>
            <span
              className="MuiTypography-root-30 MuiTypography-body2-38 MuiTypography-colorTextSecondary-53 MuiCardHeader-subheader-197"
            >
              12 September 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardContent-root-29"
        >
          <h2
            className="MuiTypography-root-30 MuiTypography-headline-35 MuiTypography-gutterBottom-47"
          >
            def
          </h2>
          <p
            className="MuiTypography-root-30 MuiTypography-body1-39"
          >
            tester
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile renders Profile without description 1`] = `
<div
  style={
    Object {
      "marginLeft": "25%",
      "marginRight": "25%",
      "marginTop": "2%",
      "paddingBottom": "5%",
    }
  }
>
  <div>
    <div
      className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
      style={
        Object {
          "boxShadow": "0px 0px 0px 0px rgba(0, 0, 0, 0.2)",
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flex": 4,
            "flexDirection": "column",
          }
        }
      >
        <div
          className="MuiCardContent-root-29"
          style={
            Object {
              "flex": "1 0 auto",
            }
          }
        >
          <h1
            className="MuiTypography-root-30 MuiTypography-display1-34"
          >
            user
          </h1>
          <p
            className="MuiTypography-root-30 MuiTypography-body1-39"
            style={
              Object {
                "marginTop": 4,
              }
            }
          >
            
          </p>
          <p
            className="MuiTypography-root-30 MuiTypography-body1-39"
            style={
              Object {
                "color": "gray",
                "fontSize": 12,
                "marginTop": 12,
              }
            }
          >
            Hexanews member since Invalid date
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <img
          alt="avatar"
          src={undefined}
          style={
            Object {
              "borderRadius": "50%",
              "height": 100,
              "width": 100,
            }
          }
        />
      </div>
    </div>
  </div>
  <button
    className="MuiButtonBase-root-81 MuiButton-root-55 MuiButton-text-57 MuiButton-outlined-63 MuiButton-sizeSmall-78"
    disabled={false}
    id="accountButton"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "marginLeft": 20,
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-56"
    >
      My Account
    </span>
    <span
      className="MuiTouchRipple-root-84"
    />
  </button>
  <hr
    className="MuiDivider-root-91"
    style={
      Object {
        "marginTop": 20,
      }
    }
  />
  <div
    className="MuiGrid-container-95 MuiGrid-spacing-xs-24-119"
  >
    <div
      className="MuiGrid-item-96 MuiGrid-grid-xs-12-135"
      style={
        Object {
          "marginRight": 24,
        }
      }
    >
      <div
        className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
        id="card-1"
        onClick={[Function]}
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "cursor": "pointer",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-192"
        >
          <div
            className="MuiCardHeader-avatar-193"
          >
            <div
              className="MuiAvatar-root-198 MuiAvatar-colorDefault-199"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            >
              HC
            </div>
          </div>
          <div
            className="MuiCardHeader-content-195"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-body2-38 MuiCardHeader-title-196"
            >
              user
            </span>
            <span
              className="MuiTypography-root-30 MuiTypography-body2-38 MuiTypography-colorTextSecondary-53 MuiCardHeader-subheader-197"
            >
              12 September 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardContent-root-29"
        >
          <h2
            className="MuiTypography-root-30 MuiTypography-headline-35 MuiTypography-gutterBottom-47"
          >
            abc
          </h2>
          <p
            className="MuiTypography-root-30 MuiTypography-body1-39"
          >
            test
          </p>
        </div>
      </div>
      <div
        className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
        id="card-2"
        onClick={[Function]}
        style={
          Object {
            "boxShadow": "0 1px 4px rgba(0, 0, 0, 0.2)",
            "cursor": "pointer",
            "marginTop": 36,
          }
        }
      >
        <div
          className="MuiCardHeader-root-192"
        >
          <div
            className="MuiCardHeader-avatar-193"
          >
            <div
              className="MuiAvatar-root-198 MuiAvatar-colorDefault-199"
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "green",
                  "height": 50,
                  "width": 50,
                }
              }
            >
              HC
            </div>
          </div>
          <div
            className="MuiCardHeader-content-195"
          >
            <span
              className="MuiTypography-root-30 MuiTypography-body2-38 MuiCardHeader-title-196"
            >
              user
            </span>
            <span
              className="MuiTypography-root-30 MuiTypography-body2-38 MuiTypography-colorTextSecondary-53 MuiCardHeader-subheader-197"
            >
              12 September 2018
            </span>
          </div>
        </div>
        <div
          className="MuiCardContent-root-29"
        >
          <h2
            className="MuiTypography-root-30 MuiTypography-headline-35 MuiTypography-gutterBottom-47"
          >
            def
          </h2>
          <p
            className="MuiTypography-root-30 MuiTypography-body1-39"
          >
            tester
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
